--- a/data-science-exploratory/.env.example
+++ b/data-science-exploratory/.env.example
@@ -1,4 +1,4 @@
-RESEARCH_TAG=data-science-exploratory ## This will form the name of the container.
+NAME-TAG=default ## This will form the name of the container.
 
 JUPYTER_EXTERNAL_PORT=8888
 SPARK_MASTER_WEBUI_PORT=8080
