--- a/data-science-api/docker-compose.yml
+++ b/data-science-api/docker-compose.yml
@@ -19,3 +19,21 @@ services:
       - ${SPARK_MASTER_PORT}:7077
     image: ds-exploratory
     container_name: ds-exploratory-${NAME-TAG}
+
+  processing:
+    build: processing
+    env_file:
+      - .env
+    environment:
+      TIMEZONE: America/Sao_Paulo
+      SPARK_CONF_DIR: /conf
+      SPARK_PUBLIC_DNS: ${SPARK_PUBLIC_DNS}
+      SPARK_MASTER_PORT: ${SPARK_MASTER_PORT}
+      SPARK_WORKER_WEBUI_PORT: ${SPARK_WORKER_PORT}
+      SPARK_PUBLIC_DNS: ${SPARK_PUBLIC_DNS}
+    volumes:
+      - ./processing:/mnt/code
+      - ${DATA_VOLUME}:/mnt/data
+      - ./processing/conf/worker:/conf
+    image: ds-api
+    container_name: ds-api-${CONTAINER_TAG}
