Add missing JUPYTER_EXTERNAL_PORT argument

--- a/data-science-api/docker-compose.yml
+++ b/data-science-api/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.5"
 services:
   research:
     build: research
+    args:
+      JUPYTER_EXTERNAL_PORT: ${JUPYTER_EXTERNAL_PORT}
     volumes:
       - ./research:/mnt/code
       - ${DATA_VOLUME}:/mnt/data
