Atualizar o template Docker para projetos de data science que envolvam API

--- a/data-science-api/.env.example
+++ b/data-science-api/.env.example
@@ -1,10 +1,6 @@
 DATA_VOLUME=./data
 CONTAINER_TAG=default ## This will form the name of the container.
 
-JUPYTER_EXTERNAL_PORT=8888
-SPARK_MASTER_WEBUI_PORT=8080
-SPARK_APPLICATION_PORT=4040
-SPARK_WORKER_PORT=8081
-SPARK_MASTER_PORT=7077
+USER_PORT_TAG=
 
-SPARK_PUBLIC_DNS=localhost
+JUPYTER_EXTERNAL_PORT=8888
