--- a/data-science-api/processing/Dockerfile
+++ b/data-science-api/processing/Dockerfile
@@ -1,13 +1,26 @@
 # Pyspark image from https://hub.docker.com/r/datasciencebrigade/pyspark-image
-FROM datasciencebrigade/pyspark-image:1.2
-
-COPY conf/jars/* $SPARK_HOME/jars/
-COPY conf/hadoop/ $HADOOP_CONF_DIR/
+FROM python:3.7-stretch
 
 WORKDIR /mnt/code
 
-COPY requirements.txt requirements.txt
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN apt-get update \
+  && apt-get -y install vim gcc netcat poppler-utils wait-for-it default-jre zip
 
-CMD ["bash"]
+COPY requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+ENV TZ 'America/Sao_Paulo'
+RUN echo $TZ > /etc/timezone && \
+    apt-get update && apt-get install -y tzdata && \
+    rm /etc/localtime && \
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    dpkg-reconfigure -f noninteractive tzdata && \
+    apt-get clean
+
+EXPOSE 5000
+
+ENTRYPOINT ["entrypoint.sh"]
+CMD ["uvicorn", "--reload", "--host", "0.0.0.0", "--port", "5000", "api:app"]
