--- a/data-science-exploratory/docker-compose.yml
+++ b/data-science-exploratory/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.5"
 
+
 services:
   research:
-    build: research
-    args:
-      JUPYTER_EXTERNAL_PORT: ${JUPYTER_EXTERNAL_PORT}
+    build:
+        context: research
+        args:
+          JUPYTER_EXTERNAL_PORT: ${JUPYTER_EXTERNAL_PORT}
     volumes:
       - ./research:/mnt/code
       - ${DATA_VOLUME}:/mnt/data
